# aoc2023

./: .brei_history  .copier-answers.yml  Cargo.toml  Manifest.toml  Project.toml  README.md  brei.toml  entangled.toml  mkdocs.yml  pyproject.toml  xml-gen.scm
.entangled/: filedb.json  tasks.json
.github/workflows/: depoly-pages.yml
docs/: day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  index.md  svg-gen.md
examples/: pythagoras.css  pythagoras.scm
output/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16-julia.txt  day16-rust.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt
src/: AOC2023.jl  Day01.jl  Day02.jl  Day03.jl  Day04.jl  Day05.jl  Day06.jl  Day07.jl  Day08.jl  Day09.jl  Day10.jl  Day11.jl  Day12.jl  Day13.jl  Day14.jl  Day15.jl  Day16.jl  Day17.jl  Day18.jl  Day19.jl  Day20.jl  Parsing.jl  day02.py  day05-data.scm  viz-day05.scm  viz-day08-gen.jl  viz-day10.jl
test/: runtests.jl
workenv/: Manifest.toml  Project.toml
