[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Virtual env for running entangled and building docs."
authors = ["Johan Hidding <johannes.hidding@gmail.com>"]
# You may still want to add a license here
# license = "Apache 2"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
entangled-cli = "^2.0.0"
mkdocs-entangled-plugin = "^0.4.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.6"
mkdocs-macros-plugin = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
